--- a/neko-launcher-git/PKGBUILD
+++ b/neko-launcher-git/PKGBUILD
@@ -8,7 +8,7 @@ arch=('x86_64')
 url='https://github.com/Neko-Services/neko_launcher_neo'
 license=('AGPL-3.0')
 makedepends=('git')
-depends=('flutter' 'vlc')
+depends=('flutter')
 optdepends=()
 provides=('neko_launcher_neo')
 conflicts=()
