update neko-launcher to be better

--- a/neko-launcher-git/PKGBUILD
+++ b/neko-launcher-git/PKGBUILD
@@ -22,7 +22,15 @@ pkgver() {
 }
 
 prepare() {
-flutter doctor
+
+    # Enable desktop build
+    flutter channel stable
+    flutter config --enable-linux-desktop
+
+    # Get dependencies
+    cd "JHenTai"
+    flutter clean
+    flutter pub get
 }
 
 build() {
