--- a/jhentai-git/PKGBUILD
+++ b/jhentai-git/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Mitchel Stewart <quackdocttech@gmail.com>
+# Maintainer: Mitchel Stewart <quackdoctech@gmail.com>
 
 pkgname=jhentai-git
 pkgver=v3.1.0+63.r3.gb32fff3
