--- a/libLC3plus/PKGBUILD
+++ b/libLC3plus/PKGBUILD
@@ -14,7 +14,8 @@ makedepends=(
   clang
   git
 )
-provides=('libLC3plus.so')
+conflicts-('liblc3')
+provides=('libLC3plus.so' 'liblc3')
 source=('https://www.etsi.org/deliver/etsi_ts/103600_103699/103634/01.03.01_60/ts_103634v010301p0.zip'
         'CMakeLists.txt'
         'LC3plus.pc.in')
