add 'cosmic-icons-git' to cosmic-epoch
turns out this fixes the icon issues who woulda thought lol

--- a/cosmic-epoch/cosmic-epoch-git-meta/PKGBUILD
+++ b/cosmic-epoch/cosmic-epoch-git-meta/PKGBUILD
@@ -17,6 +17,7 @@ depends=(
 'cosmic-notifications-git'
 'cosmic-settings-daemon-git'
 'cosmic-workspaces-epoch-git'
+'cosmic-icons-git'
 'xdg-desktop-portal-cosmic-git')
 
 provides=("cosmic-epoch")
