--- a/cosmic-epoch/cosmic-settings-daemon-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-settings-daemon-git/PKGBUILD
@@ -5,19 +5,14 @@ pkgver=r12.00cb67f
 pkgrel=1
 pkgdesc='cosmic'
 arch=('x86_64')
-url='https://github.com/pop-os/cosmic-settings-daemon.git'
+url='https://github.com/pop-os/cosmic-settings-daemon'
 license=('GPLv3')
-depends=(
-cmake
-)
-makedepends=(
-  cargo
-  git
-)
-provides=('cosmic')
+depends=()
+makedepends=('cargo' 'just' 'git' 'cmake')
+provides=('cosmic-settings-daemon')
+conflicts=('cosmic-settings-daemon')
 source=('git+https://github.com/pop-os/cosmic-settings-daemon.git'
 )
-
 sha256sums=('SKIP')
 
 pkgver() {
@@ -28,7 +23,6 @@ pkgver() {
 build() {
     cd $srcdir/cosmic-settings-daemon
     cargo build --release
-
 }
 
 package() {
