--- a/cosmic-epoch/cosmic-applets-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-applets-git/PKGBUILD
@@ -8,7 +8,7 @@ arch=('x86_64')
 url='https://github.com/pop-os/cosmic-applets.git'
 license=('GPLv3')
 depends=()
-makedepends=('cargo' 'git' 'cmake')
+makedepends=('cargo' 'git' 'cmake' 'just')
 provides=('cosmic-applets')
 conflicts=('cosmic-applets')
 source=('git+https://github.com/pop-os/cosmic-applets.git'
@@ -23,7 +23,6 @@ pkgver() {
 build() {
     cd $srcdir/cosmic-applets
     cargo build --release
-
 }
 
 package() {
