--- a/cosmic-epoch/cosmic-panel-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-panel-git/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=cosmic-panel-git
 pkgver=r314.bca0a7c
 pkgrel=1
-pkgdesc='cosmic'
+pkgdesc='cosmic-panel'
 arch=('x86_64')
 url='https://github.com/pop-os/cosmic-panel.git'
 license=('GPLv3')
