--- a/cosmic-epoch/cosmic-applets-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-applets-git/PKGBUILD
@@ -1,7 +1,7 @@
 #Maintainer : Mitchel Stewart <quackdoctech@gmaiil.com>
 
 pkgname=cosmic-applets-git
-pkgver=r510.c67c191
+pkgver=
 pkgrel=1
 pkgdesc='cosmic-applets'
 arch=('x86_64')
