--- a/cosmic-epoch/cosmic-comp-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-comp-git/PKGBUILD
@@ -1,7 +1,7 @@
 #Maintainer : Mitchel Stewart <quackdoctech@gmaiil.com>
 
 pkgname=cosmic-comp-git
-pkgver=r669.5cebc7b
+pkgver=
 pkgrel=1
 pkgdesc='cosmic-comp'
 arch=('x86_64')
