--- a/cosmic-epoch/cosmic-launcher-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-launcher-git/PKGBUILD
@@ -1,7 +1,7 @@
 #Maintainer : Mitchel Stewart <quackdoctech@gmaiil.com>
 
 pkgname=cosmic-launcher-git
-pkgver=r137.2e1412c
+pkgver=
 pkgrel=1
 pkgdesc='cosmic-launcher'
 arch=('x86_64')
