--- a/cosmic-epoch/cosmic-workspaces-epoch-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-workspaces-epoch-git/PKGBUILD
@@ -1,7 +1,7 @@
 #Maintainer : Mitchel Stewart <quackdoctech@gmaiil.com>
 
 pkgname=cosmic-workspaces-epoch-git
-pkgver=r59.d8c820b
+pkgver=
 pkgrel=1
 pkgdesc='cosmic-workspaces-epoch'
 arch=('x86_64')
