--- a/cosmic-epoch/xdg-desktop-portal-cosmic-git/PKGBUILD
+++ b/cosmic-epoch/xdg-desktop-portal-cosmic-git/PKGBUILD
@@ -1,7 +1,7 @@
 #Maintainer : Mitchel Stewart <quackdoctech@gmaiil.com>
 
 pkgname=xdg-desktop-portal-cosmic-git
-pkgver=
+pkgver=0.1
 pkgrel=1
 pkgdesc='xdg-desktop-portal-cosmic'
 arch=('x86_64')
