--- a/cosmic-epoch/cosmic-workspaces-epoch-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-workspaces-epoch-git/PKGBUILD
@@ -27,5 +27,6 @@ build() {
 
 package() {
   cd $srcdir/cosmic-workspaces-epoch
-  install -Dm 755 target/release/cosmic-workspaces -t "${pkgdir}/usr/bin"
+  just rootdir=$pkgdir install
+  #install -Dm 755 target/release/cosmic-workspaces -t "${pkgdir}/usr/bin"
 }
