--- a/cosmic-epoch/cosmic-comp-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-comp-git/PKGBUILD
@@ -28,6 +28,7 @@ build(){
 
 package(){
   cd $srcdir/cosmic-comp
-  just rootdir=$pkgdir install
-  #install -Dm 755 target/release/cosmic-comp -t "${pkgdir}/usr/bin"
+  #just rootdir=$pkgdir install
+  install -Dm 755 target/release/cosmic-comp -t "${pkgdir}/usr/bin"
+  install -Dm 655 config.ron -t "${pkgdir}/etc/cosmic-comp/config.ron"
 }
