--- a/cosmic-epoch/xdg-desktop-portal-cosmic-git/PKGBUILD
+++ b/cosmic-epoch/xdg-desktop-portal-cosmic-git/PKGBUILD
@@ -27,6 +27,6 @@ build() {
 
 package() {
   cd $srcdir/xdg-desktop-portal-cosmic
-  just rootdir=$pkgdir install
-  #make DESTDIR="$pkgdir/" prefix="/usr" install
+  #just rootdir=$pkgdir install
+  make DESTDIR="$pkgdir/" prefix="/usr" install
 }
