--- a/cosmic-epoch/cosmic-osd-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-osd-git/PKGBUILD
@@ -27,6 +27,6 @@ build() {
 
 package() {
   cd $srcdir/cosmic-osd
-  just rootdir=$pkgdir install
-  #make DESTDIR="$pkgdir" prefix="/usr" install
+  #just rootdir=$pkgdir install
+  make DESTDIR="$pkgdir" prefix="/usr" install
 }
