--- a/cosmic-epoch/cosmic-settings-daemon-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-settings-daemon-git/PKGBUILD
@@ -27,6 +27,6 @@ build() {
 
 package() {
   cd $srcdir/cosmic-settings-daemon
-  just rootdir=$pkgdir install
-  #make DESTDIR="$pkgdir/" prefix="/usr" install
+  #just rootdir=$pkgdir install
+  make DESTDIR="$pkgdir/" prefix="/usr" install
 }
