oops p3 i missed this too?

--- a/cosmic-epoch/cosmic-workspaces-epoch-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-workspaces-epoch-git/PKGBUILD
@@ -29,5 +29,5 @@ package() {
   cd $srcdir/cosmic-workspaces-epoch
   #just rootdir=$pkgdir install
   install -Dm 755 target/release/cosmic-workspaces -t "${pkgdir}/usr/bin"
-  install -Dm 655 data/com.system76.CosmicWorkspaces.desktop -t "$(pkgdir)/usr/share/applications/"
+  install -Dm 655 data/com.system76.CosmicWorkspaces.desktop -t "${pkgdir}/usr/share/applications/"
 }
