--- a/cosmic-epoch/cosmic-store-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-store-git/PKGBUILD
@@ -1,23 +1,32 @@
 #Maintainer : Mitchel Stewart <quackdoctech@gmaiil.com>
 
 pkgname=cosmic-store-git
-pkgver=r3.7d63044
+pkgver=r23.fc1dd57
 pkgrel=1
 pkgdesc='cosmic-store'
 arch=('x86_64')
 url='https://github.com/pop-os/cosmic-store.git'
 license=('GPLv3')
 depends=()
-makedepends=('cargo' 'just' 'git' 'cmake')
+makedepends=('cargo' 'just' 'git' 'cmake' 'appstream')
 provides=('cosmic-store')
 conflicts=('cosmic-store')
 source=('git+https://github.com/pop-os/cosmic-store.git'
+        'git+https://github.com/jackpot51/appstream.git'
 )
-sha256sums=('SKIP')
+sha256sums=('SKIP'
+            'SKIP')
 
 pkgver() {
   cd "$srcdir/cosmic-store"
   printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
+}
+
+prepare() {
+  cd "$srcdir/cosmic-store"
+  git submodule init
+  git config 'submodule.appstream.url' "${srcdir}/appstream"
+  git -c protocol.file.allow=always submodule update
 }
 
 build() {
