--- a/bcachefs-git/dkms.conf
+++ b/bcachefs-git/dkms.conf
@@ -1,4 +1,4 @@
-PACKAGE_NAME="bcachefs-git-dkms"
+PACKAGE_NAME="bcachefs-dkms-git"
 PACKAGE_VERSION="6.7.0.rc7.r5.gaf21982"
 # We need to copy the files into /usr/lib/modules directory because tracing requires the headers
 PRE_BUILD="pre-build.sh $dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/source/fs/bcachefs $kernel_source_dir"
