--- a/cosmic-epoch/cosmic-applibrary-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-applibrary-git/PKGBUILD
@@ -1,7 +1,7 @@
 #Maintainer : Mitchel Stewart <quackdoctech@gmaiil.com>
 
 pkgname=cosmic-applibrary-git
-pkgver=0.1
+pkgver=r176.dcc0c48
 pkgrel=1
 pkgdesc='cosmic-applibrary'
 arch=('x86_64')
