--- a/cosmic-epoch/cosmic-launcher-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-launcher-git/PKGBUILD
@@ -1,7 +1,7 @@
 #Maintainer : Mitchel Stewart <quackdoctech@gmaiil.com>
 
 pkgname=cosmic-launcher-git
-pkgver=0.1
+pkgver=r179.fa00cf1
 pkgrel=1
 pkgdesc='cosmic-launcher'
 arch=('x86_64')
