--- a/cosmic-epoch/cosmic-osd-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-osd-git/PKGBUILD
@@ -1,7 +1,7 @@
 #Maintainer : Mitchel Stewart <quackdoctech@gmaiil.com>
 
 pkgname=cosmic-osd-git
-pkgver=0.1
+pkgver=r63.bc35c94
 pkgrel=1
 pkgdesc='cosmic-osd'
 arch=('x86_64')
