--- a/cosmic-epoch/cosmic-settings-daemon-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-settings-daemon-git/PKGBUILD
@@ -1,7 +1,7 @@
 #Maintainer : Mitchel Stewart <quackdoctech@gmaiil.com>
 
 pkgname=cosmic-settings-daemon-git
-pkgver=0.1
+pkgver=r21.f7183b6
 pkgrel=1
 pkgdesc='cosmic-settings-daemon'
 arch=('x86_64')
