--- a/cosmic-epoch/cosmic-term-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-term-git/PKGBUILD
@@ -1,7 +1,7 @@
 #Maintainer : Mitchel Stewart <quackdoctech@gmail.com>
 
 pkgname=cosmic-term-git
-pkgver=0.1
+pkgver=r211.b8cbdb9
 pkgrel=1
 pkgdesc='cosmic-term'
 arch=('x86_64')
