--- a/cosmic-epoch/cosmic-greeter-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-greeter-git/PKGBUILD
@@ -1,13 +1,13 @@
 #Maintainer : Mitchel Stewart <quackdoctech@gmaiil.com>
 
 pkgname=cosmic-greeter-git
-pkgver=r63.0320635
+pkgver=r66.8fb7b9b
 pkgrel=1
 pkgdesc='cosmic-greeter'
 arch=('x86_64')
 url='https://github.com/pop-os/cosmic-greeter.git'
 license=('GPLv3')
-depends=()
+depends=('greetd' 'cosmic-comp' 'cosmic-bg')
 makedepends=('cargo' 'just' 'git' 'cmake' 'makepkg-git-lfs-proto')
 provides=('cosmic-greeter')
 conflicts=('cosmic-greeter')
