--- a/cosmic-epoch/cosmic-osd-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-osd-git/PKGBUILD
@@ -21,6 +21,7 @@ pkgver() {
 }
 
 build() {
+    export POLKIT_AGENT_HELPER_1="/usr/lib/polkit-1/polkit-agent-helper-1"
     cd $srcdir/cosmic-osd
     cargo build --release
 }
