update cosmic-store stuff

--- a/cosmic-epoch/cosmic-store-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-store-git/PKGBUILD
@@ -6,9 +6,9 @@ pkgrel=1
 pkgdesc='cosmic-store'
 arch=('x86_64')
 url='https://github.com/pop-os/cosmic-store.git'
-license=('GPLv3')
-depends=()
-makedepends=('cargo' 'just' 'git' 'cmake' 'appstream')
+license=('GPL-3.0-or-later')
+depends=('cosmic-icons-git' 'flatpak' 'packagekit')
+makedepends=('cargo' 'just' 'git')
 provides=('cosmic-store')
 conflicts=('cosmic-store')
 source=('git+https://github.com/pop-os/cosmic-store.git'
