update cosmic-store a bit

--- a/cosmic-epoch/cosmic-store-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-store-git/PKGBUILD
@@ -7,7 +7,7 @@ pkgdesc='cosmic-store'
 arch=('x86_64')
 url='https://github.com/pop-os/cosmic-store.git'
 license=('GPL-3.0-or-later')
-depends=('cosmic-icons-git' 'flatpak' 'packagekit')
+depends=('cosmic-icons-git' 'flatpak' 'packagekit' 'pop-icon-theme')
 makedepends=('cargo' 'just' 'git')
 provides=('cosmic-store')
 conflicts=('cosmic-store')
