--- a/cosmic-epoch/cosmic-edit-git/PKGBUILD
+++ b/cosmic-epoch/cosmic-edit-git/PKGBUILD
@@ -1,20 +1,27 @@
 #Maintainer : Mitchel Stewart <quackdoctech@gmail.com>
 
 pkgname=cosmic-edit-git
-pkgver=r388.fb151fd
+pkgver=r403.07115fd
 pkgrel=1
-pkgdesc='cosmic-edit'
+pkgdesc="COSMIC Text Editor"
 arch=('x86_64')
-url='https://github.com/pop-os/cosmic-edit'
-license=('GPLv3')
-depends=()
-makedepends=('cargo' 'git')
-provides=('cosmic-edit')
-conflicts=('cosmic-edit')
-source=('git+https://github.com/pop-os/cosmic-edit.git'
+url="https://github.com/pop-os/cosmic-edit"
+license=('GPL-3.0-or-later')
+depends=(
+  'cosmic-icons-git'
+  'libxkbcommon'
+  'wayland'
 )
+makedepends=(
+  'cargo'
+  'git' 
+  'just'
+)
+provides=("${pkgname%-git}")
+conflicts=("${pkgname%-git}" 'cosmic-text-editor')
+replaces=('cosmic-text-editor-git')
+source=('git+https://github.com/pop-os/cosmic-edit.git')
 sha256sums=('SKIP')
-#backup=('etc/cosmic-edit/config.ron')
   
 pkgver(){
   cd "$srcdir/cosmic-edit"
